ak1pro/infrastructure/kube-public/httproutes.yaml
# This route functions correctly when created in either
# the production (prod) and staging (staging) namespaces,
# but it does not work when created in the kube-public namespace.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
  namespace: kube-public
spec:
  parentRefs:
    - kind: Gateway
      name: envoy-gateway
      namespace: kube-public
      sectionName: http
  hostnames:
    - "*.ak1pro.n1l.ro"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
